--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "react-dom": "^17.0.2",
     "react-hooks-helper": "^1.6.0",
     "react-if": "^4.0.1",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.38.2",
     "web-vitals": "^1.1.2"
   },
